--- a/app-client/app.json
+++ b/app-client/app.json
@@ -24,7 +24,7 @@
     "web": {
       "bundler": "metro",
       "output": "static",
-      "favicon": "./assets/images/favicon.png"
+      "favicon": "./assets/images/kiit-logo.png"
     },
     "plugins": [
       "expo-router"
